--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,40 +1,75 @@
 ﻿<Window x:Class="CryptoApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:CryptoApp"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:vm="clr-namespace:CryptoApp.ViewModels"
-        Title="CryptoApp" Height="450" Width="800">
+        xmlns:views="clr-namespace:CryptoApp.Views"
+        Title="CryptoApp" Height="600" Width="1000"
+        WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- StackPanel for Price Alert -->
-        <StackPanel Orientation="Vertical" Grid.Row="0">
-            <Label Content="Set Price Alert:"/>
-            <TextBox x:Name="priceInput"/>
-            <Button Content="Set Alert" Command="{Binding SetAlertCommand}" CommandParameter="{Binding Text, ElementName=priceInput}"/>
-            <Button Content="Details" Command="{Binding OpenDetailViewCommand}"/>
-            <Button Content="Refresh Data" Command="{Binding RefreshDataCommand}"/>
+        <!-- Área de Controle e Pesquisa -->
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Grid.Row="0" Margin="10" Background="#3f51b5" VerticalAlignment="Center">
+            <Button Command="{Binding RefreshDataCommand}" ToolTip="Refresh Data" Style="{DynamicResource MaterialDesignFlatButton}">
+                <materialDesign:PackIcon Kind="Refresh" />
+            </Button>
+            <TextBox x:Name="searchBox" Width="250" Margin="10,0" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" 
+                     materialDesign:HintAssist.Hint="Search..." ToolTip="Search for a cryptocurrency"/>
+            <TextBox x:Name="priceInput" Width="150" Margin="10,0" Text="{Binding PriceAlertText, UpdateSourceTrigger=PropertyChanged}" 
+                     materialDesign:HintAssist.Hint="Set Alert Price" ToolTip="Set price alert"/>
+            <Button Command="{Binding SetAlertCommand}" CommandParameter="{Binding Text, ElementName=priceInput}" 
+                    ToolTip="Set Price Alert" Style="{DynamicResource MaterialDesignFlatButton}">
+                <materialDesign:PackIcon Kind="Bell" />
+            </Button>
+            <ComboBox Width="150" Margin="10,0" ItemsSource="{Binding PeriodOptions}" SelectedItem="{Binding SelectedPeriod}" ToolTip="Select Period"/>
         </StackPanel>
 
-        <!-- DataGrid for displaying Cryptos -->
-        <DataGrid ItemsSource="{Binding Cryptos}" AutoGenerateColumns="False" Grid.Row="1" IsReadOnly="True" CanUserSortColumns="True">
+        <!-- DataGrid para Todas as Criptomoedas -->
+        <DataGrid ItemsSource="{Binding Cryptos}" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Margin="10"
+          RowHeaderWidth="0" ColumnWidth="*" IsReadOnly="True" HeadersVisibility="Column" CanUserSortColumns="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}" />
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
-                <DataGridTextColumn Header="Price" Binding="{Binding Quote[USD].Price, StringFormat=C2}" />
-                <DataGridTextColumn Header="Change 24h" Binding="{Binding Quote[USD].PercentChange24h, StringFormat='{}{0:F2}%'}" />
+                <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}" Width="*" />
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*" />
+                <DataGridTextColumn Header="Price" Binding="{Binding Quote[USD].Price, StringFormat=C2}" Width="*" />
+                <DataGridTextColumn Header="Change 24h" Binding="{Binding Path=Quote[USD].PercentChange24h, StringFormat='{}{0:F2}%'}" Width="*" />
+                <DataGridTemplateColumn Header="Add to Favorites" Width="Auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Add" Command="{Binding DataContext.AddFavoriteCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    CommandParameter="{Binding Symbol}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
-        <!-- StatusBar for Status Messages -->
-        <StatusBar Grid.Row="2" Background="LightGray" HorizontalAlignment="Stretch">
-            <TextBlock Text="{Binding StatusMessage}"/>
+        <!-- LiveCharts Graph -->
+        <lvc:CartesianChart Series="{Binding HistoricalChartSeries}" Grid.Column="1" Grid.Row="1" Margin="10">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Date" Labels="{Binding HistoricalLabels}"/>
+            </lvc:CartesianChart.AxisX>
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Price (USD)" LabelFormatter="{Binding PriceFormatter}"/>
+            </lvc:CartesianChart.AxisY>
+        </lvc:CartesianChart>
+
+        <!-- Barra de Status -->
+        <StatusBar Grid.ColumnSpan="2" Grid.Row="2" Background="LightGray" HorizontalAlignment="Stretch" Padding="5">
+            <TextBlock Text="{Binding StatusMessage}" Foreground="Black"/>
         </StatusBar>
     </Grid>
 </Window>
